@@ -1,4 +1,7 @@
-2006-09-09  Michael Stucki  <michael@typo3.org>
+2006-10-11  Franz Holzinger  <kontakt@fholzinger.com>
+	* additional WHERE clauses to many functions in order to filter the lists
+	* call function to load additional TCA to allow fields added from the language specific static_info_tables derivates
 
+2006-09-09  Michael Stucki  <michael@typo3.org>
 	* Added a ChangeLog file
 	* Initial SVN import, based on static_info_tables 2.0.0
